--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 }
 </style>
 <marquee class="html-marquee" direction="up" behavior="alternate" scrollamount="7">
-<center>Setup VPS By THIRASTORE !!!</center>
+<center>Setup VPS By KOJEXS !!!</center>
 <center></center>
-<center>Contact 085717614888</center>
+<center>Contact wa.me/6285776916806</center>
 </marquee>
